--- a/src/styles.css
+++ b/src/styles.css
@@ -46,18 +46,19 @@ section img.background {
 }
 
 h1 {
-  font-family: "Cormorant Garamond", serif;
+  font-family: "Lato variant0", serif;
   font-size: 7rem;
   font-weight: 400;
   line-height: 0.8;
-  margin: 0;
+  margin: 100;
 }
 
 h2 {
   font-size: 2rem;
   font-weight: 400;
-  margin: 0;
-  padding-top: 1rem;
+  margin-left: 100;
+  padding-top: 0rem;
+  width: 25rem;
 }
 
 h3 {
